Fixed vertical alignment styles. Organized css.

--- a/css/app.css
+++ b/css/app.css
@@ -525,14 +525,6 @@ body {
   content: "\e60b";
 }
 
-.is-hidden {
-  display: none;
-}
-
-.is-invisible {
-  visibility: hidden;
-}
-
 .spreedy-player-settings {
   text-align: center;
 }
@@ -552,18 +544,35 @@ body {
   float: right;
 }
 
+.text-input-container {
+  height: 100%;
+}
+
 .text-input {
   border: none;
   font-size: 1.25em;
   padding: 1em;
   width: 100%;
+  height: 100%;
+}
+
+.word-display-container {
+  display: table;
+  width: 100%;
+  height: 100%;
 }
 
 .word-display {
+  display: table-cell;
   font-size: 8em;
-  position: absolute;
-  top: 50%;
-  margin-top: -1em;
   text-align: center;
-  width: 100%;
+  vertical-align: middle;
+}
+
+.is-hidden {
+  display: none;
+}
+
+.is-invisible {
+  visibility: hidden;
 }
